[package]
name = "skrt"
description = "Lightweight, zero-copy SubRip Text (SRT) subtitle library for Rust - std only, no dependencies"
version = "0.1.1"
edition = "2024"
authors = ["Mack Stump <mack@mackstump.com>"]
rust-version = "1.85.1"
homepage = "https://github.com/smackysnacks/skrt"
repository = "https://github.com/smackysnacks/skrt"
documentation = "https://docs.rs/skrt/"
license = "MIT"
categories = ["parsing"]
keywords = ["srt", "subtitle", "std-only"]

[dependencies]
